--- a/index.html
+++ b/index.html
@@ -7,7 +7,11 @@
   <title>Dynamic Content Midterm Project</title>
 </head>
 <body>
+  <!-- yunyun's part -->
 
+  <!-- raquel's part -->
+
+  <!-- evelyn's part -->
   
   <script src = "app.js"></script>
 </body>
