--- a/evelyn.html
+++ b/evelyn.html
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="evelyn.css" rel="stylesheet" type="text/css" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <title>Evelyn's part</title>
 </head>
+
 <body>
   <!-- home page -->
 
@@ -19,34 +22,42 @@
   </div>
 
   <!-- question 1 -->
-  <div>
+  <div id="Q1">
     <div id="Q1_top">
-      <div class = "imgs">
-        <img class = "imgs" src="imgs/bunny.png">
-        <img class = "imgs" src="imgs/bunny.png">
-        <img class = "imgs" src="imgs/turtle.png">
-        <img class = "imgs" src="imgs/turtle.png">       
+      <div class="q1images">
+        <img class="imgs" src="imgs/bunny.png">
+        <img class="imgs" src="imgs/bunny.png">
+        <img class="imgs" src="imgs/turtle.png">
+        <img class="imgs" src="imgs/turtle.png">
       </div>
-      <div>
-        <img class = "imgs" src="">
-        <img class = "imgs" src="">
-        <img class = "imgs" src="">
-        <img class = "imgs" src="">   
+      <div class="q1images">
+        <img class="imgs" src="imgs/bunny.png">
+        <img class="imgs" src="imgs/turtle.png">
+        <img class="imgs" src="imgs/bunny.png">
+        <img class="imgs" src="imgs/turtle.png">
       </div>
-      <div>
-        <img class = "imgs" src="">
-        <img class = "imgs" src="">
-        <img class = "imgs" src="">
-        <img class = "imgs" src="">
+      <div class="q1images">
+        <img class="imgs" src="imgs/bunny.png">
+        <img class="imgs" src="imgs/turtle.png">
+        <img class="imgs" src="imgs/turtle.png">
+        <img class="imgs" src="imgs/bunny.png">
       </div>
-      <div>
-        <img class = "imgs" src="">
-        <img class = "imgs" src="">
-        <img class = "imgs" src="">
-        <img class = "imgs" src="">
-      </div>    
+      <div class="q1images">
+        <img class="imgs" src="imgs/turtle.png">
+        <img class="imgs" src="imgs/bunny.png">
+        <img class="imgs" src="imgs/turtle.png">
+        <img class="imgs" src="imgs/question.png" style="max-height: 100px; margin-left: 50px;">
+      </div>
+    </div>
+    <div id="Q1_bottom">
+      <img class="imgs" src="imgs/question.png" style="max-height: 100px; margin-right: 50px;">
+      <h1>=</h1>
+      <img class="imgs" src="imgs/turtle.png">
+      <h1>or</h1>
+      <img class="imgs" src="imgs/bunny.png">
     </div>
   </div>
-  
+
 </body>
+
 </html>
