--- a/yunyun_footer.html
+++ b/yunyun_footer.html
@@ -14,15 +14,15 @@
                     <span>Produced By</span>
                 </div>
                 <div class="footer_photos">
-                     <img src="imgs/raquel.png" alt="">
+                     <img src="imgs/raquel.png" alt="raquel">
                     <span>Raquel</span>
                 </div>
                 <div class="footer_photos">
-                    <img src="imgs/evelyn.png" alt="">
+                    <img src="imgs/evelyn.png" alt="evelyn">
                     <span>Evelyn</span>
                 </div>
                 <div class="footer_photos">
-                    <img src="imgs/yunyun.png" alt=""> 
+                    <img src="imgs/yunyun.png" alt="yunyun"> 
                     <span>Yunyun</span>
                 </div>
                 <div id="footer_copyright">
