--- a/1.html
+++ b/1.html
@@ -115,7 +115,7 @@
     </div>
     <img class="siginal_A">
     <div id="answer_key">
-      <h3 id="explain"></h3>
+      <p id="explain_A"></p>
     </div>
     <button class="verbal-buttons-Agree" onclick="StartType_A()">Next</button>
   </div>
@@ -126,7 +126,7 @@
     </div>
     <img class="siginal_B">
     <div id="answer_key">
-      <h3 id="explain"></h3>
+      <h3 id="explain_B"></h3>
     </div>
     <button class="verbal-buttons-Agree" onclick="StartType_B()">Next</button>
   </div>
